# applyd

./: .gitignore  CLAUDE.md  README.md  profile.example.md  pyproject.toml  requirements.txt  resume_base.tex  targets.json
openclaw/skills/applyd-apply/: SKILL.md
scripts/: compare_search.py  test_spider.py
src/applyd/: callback.py  cli.py  config.py  filters.py  models.py  store.py
src/applyd/apply/: __init__.py  browser.py
src/applyd/commands/: __init__.py  apply.py  discover.py  enrich.py  jobs.py  resolve.py  tailor.py
src/applyd/discovery/: __init__.py  _base.py  cache.py  resolver.py  routing.py
src/applyd/discovery/aggregators/: __init__.py  broad_search.py  simplifyjobs.py
src/applyd/discovery/ats/: __init__.py  ashby.py  greenhouse.py  lever.py  smartrecruiters.py  workable.py
src/applyd/discovery/search/: __init__.py  base.py  brave.py  serper.py
src/applyd/enrichment/: __init__.py  fetcher.py  spider.py
src/applyd/tailor/: __init__.py  compile.py  prompts.py  render.py  validate.py
