[project]
name = "applyd"
version = "0.1.0"
description = "Autonomous job application engine — discovery layer"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "trafilatura>=1.12",
    "anthropic>=0.40",
    "playwright>=1.40",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
applyd = "applyd.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
